<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Files</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="sd_card">SD Card</string>
    <string name="downloads">Downloads</string>
    <string name="documents">Documents</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio</string>
    <string name="archives">Archives</string>
    <string name="apks">APKs</string>
    <string name="recent">Recent</string>
    <string name="favorites">Favorites</string>
    <string name="trash">Trash</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="view">View</string>
    <string name="select_all">Select All</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="properties">Properties</string>
    <string name="share">Share</string>
    <string name="send_to">Send to</string>
    <string name="compress">Compress</string>
    <string name="extract">Extract</string>
    <string name="new_folder">New Folder</string>
    <string name="new_file">New File</string>
    <string name="hidden_files">Hidden Files</string>
    <string name="show_hidden">Show Hidden Files</string>
    <string name="size">Size</string>
    <string name="date_modified">Date Modified</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="path">Path</string>
    <string name="contains">Contains</string>
    <string name="items">items</string>
    <string name="free">Free</string>
    <string name="used">Used</string>
    <string name="total">Total</string>
    <string name="calculating">Calculating…</string>
    <string name="no_files">No files here</string>
    <string name="permission_required">Permission required to access files</string>
    <string name="settings">Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
</resources>
